<resources>
    <string name="app_name">Oof</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_sign_into_oof">Please sign into Oof</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_to_oof">Sign up to Oof!</string>
    <string name="strong_password_generator">Strong password generator</string>
    <string name="generate">Generate</string>
</resources>