<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:textColor="@color/colorPrimary"
        android:textSize="50dp"
        android:gravity="center"
        android:text="@string/sign_up_to_oof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpUsage" />

    <EditText
        android:inputType="textVisiblePassword"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <EditText
        android:id="@+id/userpass"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword" />
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/reg"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
        <Button
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginStart="100dp"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/UUID"
        android:textSize="30dp"
        android:text="@string/strong_password_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpUsage" />
    <Button
        android:id="@+id/create"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:text="@string/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
