<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <TextView
        android:textColor="@android:color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_into_oof"
        tools:ignore="SpUsage" />
    <EditText
        android:inputType="textVisiblePassword"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="130dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:autofillHints="" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/user_password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <Button
        android:textColor="#C8DAC0FF"
        android:text="@string/sign_in"
        android:backgroundTint="#235500"
        android:id="@+id/go"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="#A4FFFFFF"
        android:text="@string/sign_up"
        android:id="@+id/sign_Up"
        android:backgroundTint="#037C70"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>